--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,8 +4,9 @@ nav {
     width: 90vw;
     position: fixed;
     top:16px;
-    background-color: #ffffff;
+    background-color: #01959a;
     left: 50%;
+    /* رجعلي ياخ 50 قد نص عرضو لورا  */
     transform: translateX(-50%);
     z-index: 9;
     padding: 0 30px;
@@ -45,7 +46,7 @@ nav .items ul li:hover{
 .nav .items ul li i{
     background-color: black;
 }
-nav .items button {
+nav .items button ,.nav-menu button {
     background-color: black;
 color: #ffffff;
     border-radius: .3rem;
@@ -60,4 +61,49 @@ white-space: nowrap;
 nav .items button:hover {
     background-color: black;
     color: #fff;
+}
+nav .menu-btn {
+    padding: .5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    display: none
+;
+}
+ .nav-menu {
+    position: fixed;
+    top:86px;
+    padding-top: 10px;
+    left: 50%;
+    width: 90vw;
+    /* لخليا تطلع لبرا وبس اكبس عليا تظخر من برا تفوت */
+    transform: translateX(-157%);
+    background-color: #01959a;
+    z-index: 999;
+    text-align: center;
+    transition: 1s all;
+}
+.nav-menu.active{
+    transform: translate(-50%);
+}
+
+.nav-menu ul{
+    list-style: none;
+    width: max-content;
+    margin: 0 auto;
+}
+ .nav-menu li{
+    width: max-content;
+    margin: 30px 0;
+   ;
+ }
+ 
+
+@media screen  and (max-width:992px)
+{
+    nav .items{
+        display: none;
+    }
+    nav .menu-btn{
+        display: block;
+    }
 }
